--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@font-face {
-  font-family: "poppins";
-  src: url("./assets/fonts/Poppins-Regular.ttf");
-}
